--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -14,19 +14,43 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="20dp">
-        <TextView
-            android:id="@+id/diary_mapNpics_Title"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_mapNpics_TitleBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textSize="20pt"
+            android:layout_height="100dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent">
+            <ImageView
+                android:id="@+id/diary_mapNpics_TitleImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:src="@drawable/blank"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:id="@+id/diary_mapNpics_TitleText"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:text="Title"
+                android:textSize="20pt"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"/>
+            <ImageButton
+                android:id="@+id/diary_mapNpics_TitleLike"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:src="@drawable/checked"
+                android:scaleType="centerCrop"/>
+        </android.support.constraint.ConstraintLayout>
         <FrameLayout
             android:id="@+id/diary_mapNpics_Map_Outer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Title"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:padding="10dp">
