--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -17,33 +17,40 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/diary_mapNpics_TitleBox"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.15"
+            android:paddingHorizontal="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent">
             <ImageView
                 android:id="@+id/diary_mapNpics_TitleImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:src="@drawable/blank"
+                android:src="@drawable/diary"
+                android:background="#00000000"
                 android:scaleType="centerCrop"/>
             <TextView
                 android:id="@+id/diary_mapNpics_TitleText"
                 android:layout_width="0dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
                 android:text="Title"
-                android:textSize="20pt"
+                android:gravity="center_vertical"
+                android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
                 app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"/>
             <ImageButton
                 android:id="@+id/diary_mapNpics_TitleLike"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:src="@drawable/checked"
+                android:src="@drawable/heartgrey"
+                android:background="#00000000"
                 android:scaleType="centerCrop"/>
         </android.support.constraint.ConstraintLayout>
         <FrameLayout
