--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -22,7 +22,8 @@
                 android:id="@+id/gallerydetail_topbar"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="#000000"
+                android:background="#AAAAAA"
+                app:layout_constraintHeight_percent="0.1"
                 app:layout_constraintBottom_toTopOf="@id/gallerydetail_guideline"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -30,7 +31,7 @@
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/gallerydetail_btn_back"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_height="match_parent"
                     android:src="@drawable/arrow_left"
                     android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +53,7 @@
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/gallerydetail_btn_detail"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_height="match_parent"
                     android:src="@drawable/detail"
                     android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +76,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/gallerydetail_guideline"
                 app:layout_constraintBottom_toBottomOf="@id/gallerydetail_guidelineBottom"
-                android:background="#000000"
+                android:background="#FFFFFF"
                 android:src="@drawable/blank"/>
             <android.support.constraint.Guideline
                 android:id="@+id/gallerydetail_guidelineBottom"
@@ -89,7 +90,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/gallerydetail_guidelineBottom"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:background="#000000">
+                android:background="#FFFFFF">
 
             </android.support.constraint.ConstraintLayout>
 
