--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!DOCTYPE android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/diary_mapNpics_Root"
@@ -8,180 +8,223 @@
     tools:context=".diary.Diary_mapNPictures">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/diary_mapNpics_MapFrame"
+        android:id="@+id/diary_mapNpics_View"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="20dp"
-        app:layout_constraintHeight_percent="0.5"
+        android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone">
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_mapNpics_TitleBox"
+            android:id="@+id/diary_mapNpics_MapFrame"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:paddingHorizontal="10dp"
+            android:padding="20dp"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/diary_mapNpics_TitleBox"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:paddingHorizontal="10dp"
+                app:layout_constraintHeight_percent="0.15"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/diary_mapNpics_TitleImage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/diary"
+                    android:background="#00000000"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="10dp"
+                    app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
+                    app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/diary_mapNpics_ReadTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Title"
+                        android:gravity="center_vertical"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <EditText
+                        android:id="@+id/diary_mapNpics_EditTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:visibility="gone"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+
+                <ImageButton
+                    android:id="@+id/diary_mapNpics_EditStart"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/pen"
+                    android:padding="5dp"
+                    android:scaleType="centerCrop"
+                    android:background="#00000000"
+                    android:visibility="visible"
+                    android:onClick="diary_onEditClick"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/diary_mapNpics_TitleLike"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/heartgrey"
+                    android:background="#00000000"
+                    android:scaleType="centerCrop"
+                    android:onClick="diary_onLikeClick"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </android.support.constraint.ConstraintLayout>
+
+            <FrameLayout
+                android:id="@+id/diary_mapNpics_Map_Outer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox">
+
+                <kr.ac.kw.coms.globealbum.map.MyMapView
+                    android:id="@+id/diary_mapNpics_Map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+
+        </android.support.constraint.ConstraintLayout>
+
+
+        <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+            android:id="@+id/diary_mapNpics_Pics"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="20dp"
             app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_MapFrame">
+
+        </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_mapNpics_Write"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.35"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
+
+            <EditText
+                android:id="@+id/diary_mapNpics_EditBody"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:hint="내용"
+                app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_EditSave"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/diary_mapNpics_EditSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="diary_onSaveClick"
+                android:text="저장"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditCancel" />
+
+            <Button
+                android:id="@+id/diary_mapNpics_EditCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="diary_onCancelClick"
+                android:text="취소"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_mapNpics_Read"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.35"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
+
+            <TextView
+                android:id="@+id/diary_mapNpics_ReadBody"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:hint="내용"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/diary_mapNpics_TitleImage"
+                android:id="@+id/diary_mapNpics_SelectedImageOverLay"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/diary"
-                android:background="#00000000"
-                android:scaleType="centerCrop"
-                app:layout_constraintDimensionRatio="1:1"
+                android:layout_height="0dp"
+                android:visibility="gone"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
-                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
-                android:paddingLeft="10dp">
-                <TextView
-                    android:id="@+id/diary_mapNpics_ReadTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Title"
-                    android:gravity="center_vertical"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-
-                <EditText
-                    android:id="@+id/diary_mapNpics_EditTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:visibility="gone"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-            </android.support.constraint.ConstraintLayout>
-
-
-            <ImageButton
-                android:id="@+id/diary_mapNpics_EditStart"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/pen"
-                android:padding="5dp"
-                android:scaleType="centerCrop"
-                android:background="#00000000"
-                android:visibility="visible"
-                android:onClick="diary_onEditClick"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/diary_mapNpics_TitleLike"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/heartgrey"
-                android:background="#00000000"
-                android:scaleType="centerCrop"
-                android:onClick="diary_onLikeClick"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
-
-        <FrameLayout
-            android:id="@+id/diary_mapNpics_Map_Outer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox">
-
-            <kr.ac.kw.coms.globealbum.map.MyMapView
-                android:id="@+id/diary_mapNpics_Map"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </FrameLayout>
-
     </android.support.constraint.ConstraintLayout>
-
-
-    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
-        android:id="@+id/diary_mapNpics_Pics"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="20dp"
-        app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_MapFrame">
-
-    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
-
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/diary_mapNpics_Write"
+        android:id="@+id/diary_mapNpics_SelectPics"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.35"
+        android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
-
-        <EditText
-            android:id="@+id/diary_mapNpics_EditBody"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:hint="내용"
-            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_EditSave"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/diary_mapNpics_EditSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="diary_onSaveClick"
-            android:text="저장"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditCancel" />
-
-        <Button
-            android:id="@+id/diary_mapNpics_EditCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="diary_onCancelClick"
-            android:text="취소"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/diary_mapNpics_Read"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.35"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
-
+        app:layout_constraintTop_toTopOf="parent">
         <TextView
-            android:id="@+id/diary_mapNpics_ReadBody"
+            android:id="@+id/diary_mapNpics_SelectPics_Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="사진 선택..."
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <kr.ac.kw.coms.globealbum.diary.VerticalListView
+            android:id="@+id/diary_mapNpics_SelectPics_List"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:hint="내용"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_SelectPics_Title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
     </android.support.constraint.ConstraintLayout>
-
-
 </android.support.constraint.ConstraintLayout>
